Fix CORS for static images - allow any origin